[package]
name = "vm_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = {version = "*", features = ["sys-default"]}
thiserror = "1.0"
anyhow = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
wasmer-middlewares = "*"
wasmer-engine-universal ="*"
wasmer-compiler-singlepass = "*"
blake2 = "*"
im-rc = {version = "15.1.0", features = ["serde", "refpool"]}
rug = {version = "*", features = ["serde", "integer"]}
slotmap = "*"
mimalloc = { version = "*" }

[lib]
bench = false

[dev-dependencies]
criterion = "0.4"
mimalloc = { version = "*" }


[[bench]]
name = "my_benchmark"
harness = false


